--- a/components/hcf-page-header/style/index.less
+++ b/components/hcf-page-header/style/index.less
@@ -1,7 +1,7 @@
 @import '../../style/themes/index';
 @import '../../style/mixins/index';
 
-.fund-header {
+.header {
   background: #ffffff;
   height: 48px;
   padding-left: 16.5px;
